--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@iconify/vue": "^4.1.1",
     "@types/node": "^18.15.11",
+    "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vitest/ui": "^0.30.1",
     "@vue/test-utils": "^2.0.0-rc.18",
