--- a/package.json
+++ b/package.json
@@ -59,11 +59,13 @@
     "@vitest/ui": "^0.30.1",
     "@vue/test-utils": "^2.0.0-rc.18",
     "autoprefixer": "^10.4.14",
+    "fast-glob": "3.x",
     "postcss": "^8.4.21",
     "sass": "^1.61.0",
     "tailwindcss": "^3.3.1",
     "unplugin-auto-import": "^0.15.2",
     "vite": "^4.3.2",
+    "vite-plugin-svg-icons": "2.x",
     "vite-plugin-vuetify": "^1.0.2",
     "vitest": "^0.30.1"
   }
